--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         </div>
         <div class="section position">
           <a href="https://rs.school/js/"
-            ><img src="/assets/img/rss.svg" alt="logo"
+            ><img src="./assets/img/rss.svg" alt="logo"
           /></a>
         </div>
       </div>
