--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
             <img
               src="./assets/img/Photo.jpg"
               alt="Photo"
-              class="profilephoto"
-            />
+              class="profilephoto">
           </div>
         </div>
         <div class="section position">
