--- a/index.html
+++ b/index.html
@@ -143,8 +143,7 @@
         </div>
         <div class="section position">
           <a href="https://rs.school/js/"
-            ><img src="./assets/img/rss.svg" alt="logo"
-          /></a>
+            ><img src="./assets/img/rss.svg" alt="logo"></a>
         </div>
       </div>
     </footer>
