fix: add projects

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             </li>
             <li>
               <i class="fab fa-telegram"></i> Telegram:
-              <a href="https://t.me/arsenicum_33" title="github"
+              <a href="https://t.me/arsenicum_33" title="telegram"
                 >@arsenicum_33</a
               >
             </li>
@@ -131,7 +131,12 @@
           <ul>
             <li>
               <div>
-                <a href="//33arsenicum.github.io/rsschool-cv/">CV</a>
+                <a href="https://rolling-scopes-school.github.io/33arsenicum-JSFE2022Q3/online-zoo/pages/main/index.html">ONLINE-ZOO</a>
+              </div>
+            </li>
+            <li>
+              <div>
+                <a href="https://rolling-scopes-school.github.io/33arsenicum-JSFEPRESCHOOL2022Q4/plants/">Plants</a>
               </div>
             </li>
           </ul>
