fix: padding, icon, color

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <i class="fas fa-address-book"></i> Contacts
           </h2>
           <ul>
-            <li><i class="fas fa-map-marker-alt"></i> Maladzechna, Belarus</li>
+            <li><i class="fas fa-house-user"></i> Maladzechna, Belarus</li>
             <li>
               <i class="fas fa-envelope"></i> Email:
               <a href="mailto:cmykbielaruski@gmail.com" title="email"
@@ -106,12 +106,12 @@
           <h2 class="section-title"><i class="fas fa-code"></i> Skills</h2>
           <ul>
             <li>
-              <i class="fas fa-laptop-code"></i> Web-development: HTML5, CSS3,
+              <i class="fas fa-file-code"></i> Web-development: HTML5, CSS3,
               JavaScript
             </li>
             <li><i class="fab fa-git-alt"></i> Version control: GIT, Github</li>
             <li>
-              <i class="fas fa-paint-brush"></i> Graphics: Photoshop, Figma
+              <i class="fab fa-figma"></i> Graphics: Photoshop, Figma
             </li>
           </ul>
         </section>
@@ -131,12 +131,12 @@
           <ul>
             <li>
               <div>
-                <a href="https://rolling-scopes-school.github.io/33arsenicum-JSFE2022Q3/online-zoo/pages/main/index.html">ONLINE-ZOO</a>
+                <i class="fas fa-check-circle"></i><a href="https://rolling-scopes-school.github.io/33arsenicum-JSFE2022Q3/online-zoo/pages/main/index.html" target="_blank"> ONLINE-ZOO</a>
               </div>
             </li>
             <li>
               <div>
-                <a href="https://rolling-scopes-school.github.io/33arsenicum-JSFEPRESCHOOL2022Q4/plants/">Plants</a>
+                <i class="fas fa-check-circle"></i><a href="https://rolling-scopes-school.github.io/33arsenicum-JSFEPRESCHOOL2022Q4/plants/" target="_blank"> Plants</a>
               </div>
             </li>
           </ul>
