fix: add new  secton, fix markers

--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
     <link rel="icon" type="image/png" href="./assets/img/favicon.ico">
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    >
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-      rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      rel="stylesheet"
+    >
+    <link rel="stylesheet" href="style.css" >
+    <meta charset="UTF-8" >
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>CV</title>
   </head>
 
@@ -39,6 +41,9 @@
               <a href="#projects" class="nav-link">Projects</a>
             </li>
             <li class="section-item">
+              <a href="#code" class="nav-link">Code</a>
+            </li>
+            <li class="section-item">
               <a href="#education" class="nav-link">Education</a>
             </li>
             <li class="section-item">
@@ -56,7 +61,8 @@
             <img
               src="https://33arsenicum.github.io/rsschool-cv/assets/img/Photo.jpg"
               alt="Photo"
-              class="profilephoto">
+              class="profilephoto"
+            >
           </div>
         </div>
         <div class="section position">
@@ -94,26 +100,21 @@
 
         <section class="section" id="summary">
           <h2 class="section-title"><i class="fas fa-user"></i> Summary</h2>
-          <p>
-            I like writing code. This is interesting enough. Until recently, I
-            worked as a teacher at a school. Now I want to change the field of
-            activity. I am studying at the JS / FE Pre-School 2022 courses,
-            after which I want to work under the guidance of an experienced
-            developer.
-          </p>
+          <p>At 39, I discovered my passion for coding. I enjoy the art of writing code—it's an exhilarating experience. Until recently, I worked as a teacher at school, helping children explore the world. However, now I'm eager to shift gears and dive into the field of programming. Currently, I'm studying JavaScript, discovering something new and exciting every day.</p>
+          <p>I envision a world of endless possibilities in programming, where I can create amazing web applications, develop innovative solutions, and share my ideas with the world. I see myself among a team of talented developers, working on thrilling projects and implementing cutting-edge technologies that are shaping the world.</p>
+          <p>Age is just a number, so they say, and I'm ready to embrace the challenge of transitioning into a new profession. I'm determined to succeed in the realm of programming. My years of experience and teaching skills will give me an edge in learning and understanding JavaScript. I'm prepared to invest all my energy and passion into this new path, striving to become an exceptional developer and contribute to the evolution of technology.</p>
+          <p>The world of programming is not just about code and algorithms; it's about creativity, about crafting something unique and impactful. I can't wait to immerse myself in this captivating world, where age becomes a driving force for new achievements.</p>
         </section>
 
         <section class="section" id="skills">
           <h2 class="section-title"><i class="fas fa-code"></i> Skills</h2>
           <ul>
             <li>
-              <i class="fas fa-file-code"></i> Web-development: HTML5, CSS3,
+              <i class="far fa-circle"></i> Web-development: HTML5, CSS3,
               JavaScript
             </li>
-            <li><i class="fab fa-git-alt"></i> Version control: GIT, Github</li>
-            <li>
-              <i class="fab fa-figma"></i> Graphics: Photoshop, Figma
-            </li>
+            <li><i class="far fa-circle"></i> Version control: GIT, Github</li>
+            <li><i class="far fa-circle"></i> Graphics: Photoshop, Figma</li>
           </ul>
         </section>
         <section class="section" id="courses">
@@ -132,15 +133,32 @@
           <ul>
             <li>
               <div>
-                <i class="fas fa-check-circle"></i><a href="https://rolling-scopes-school.github.io/33arsenicum-JSFE2022Q3/online-zoo/pages/main/index.html" target="_blank"> ONLINE-ZOO</a>
+                <i class="far fa-circle"></i><a
+                  href="https://rolling-scopes-school.github.io/33arsenicum-JSFE2022Q3/online-zoo/pages/main/index.html"
+                  target="_blank"
+                >
+                  Online-Zoo</a
+                >
               </div>
             </li>
             <li>
               <div>
-                <i class="fas fa-check-circle"></i><a href="https://rolling-scopes-school.github.io/33arsenicum-JSFEPRESCHOOL2022Q4/plants/" target="_blank"> Plants</a>
+                <i class="far fa-circle"></i><a
+                  href="https://rolling-scopes-school.github.io/33arsenicum-JSFEPRESCHOOL2022Q4/plants/"
+                  target="_blank"
+                >
+                  Plants</a
+                >
               </div>
             </li>
           </ul>
+        </section>
+
+        <section class="section" id="code">
+          <h2 class="section-title"><i class="fas fa-code"></i> Code</h2>
+          <pre><code>function areaLargestSquare(r) {
+  return Math.pow((r), 2) * 2;
+}</code></pre>
         </section>
 
         <section class="section" id="education">
